--- a/src/Muzich/CoreBundle/Resources/views/Menu/containerMenu.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Menu/containerMenu.html.twig
@@ -8,7 +8,7 @@
       </a>
     </li>
     <li {% if active == 'private' %} class="active" {% endif %}>
-      <a href="{{ path('mynetwork_index') }}">
+      <a href="{{ path('mynetwork_home') }}">
         {{ 'container_menu.my_network'|trans({}, 'navigationui') }}
       </a>
     </li>
