--- a/src/Muzich/UserBundle/Resources/views/Security/change_password_form.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Security/change_password_form.html.twig
@@ -13,19 +13,19 @@
   <div class="field">
     {{ form_errors(form.current) }}
     {{ form_label(form.current, 'password.actual'|trans({}, 'userform')) }}
-    {{ form_widget(form.current) }}
+    {{ form_widget(form.current, {'attr':{'class':'niceinput'}}) }}
   </div>
 
   <div class="field">
     {{ form_errors(form.new.first) }}
     {{ form_label(form.new.first, 'password.new.first'|trans({}, 'userform')) }}
-    {{ form_widget(form.new.first) }}
+    {{ form_widget(form.new.first, {'attr':{'class':'niceinput'}}) }}
   </div>
 
   <div class="field">
     {{ form_errors(form.new.second) }}
     {{ form_label(form.new.second, 'password.new.second'|trans({}, 'userform')) }}
-    {{ form_widget(form.new.second) }}
+    {{ form_widget(form.new.second, {'attr':{'class':'niceinput'}}) }}
   </div>
 
 {{ form_rest(form) }}
