--- a/src/Muzich/UserBundle/Resources/views/User/change_email_form.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/User/change_email_form.html.twig
@@ -4,6 +4,6 @@
     
   {{ form_errors(form.email) }}
   {{ form_label(form.email) }}
-  {{ form_widget(form.email) }}
+  {{ form_widget(form.email, {'attr':{'class':'niceinput'}}) }}
 
 {{ form_rest(form) }}
