Mieux intégrer la proposition de tags (dans les deux sens)

--- a/src/Muzich/CoreBundle/Resources/views/Element/tag.proposition.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/tag.proposition.html.twig
@@ -15,6 +15,6 @@
 
     <input type="submit" value="{{ 'element.tag_proposition.form.submit'|trans({}, 'elements') }}" class="button" />
     <input type="button" value="{{ 'element.tag_proposition.form.cancel'|trans({}, 'elements') }}" class="button cancel" />
-
+    <div style="clear:both;"></div>
   </form>
 </div>
