--- a/web/bundles/muzichcore/css/old.css
+++ b/web/bundles/muzichcore/css/old.css
@@ -1284,7 +1284,7 @@ li.tag_proposition span.button
 
 li.tag_proposition:hover
 {
-  background-color: #c0f2ff;
+  background-color: #D5D5D5;
 }
 
 
