--- a/src/Muzich/HomeBundle/Resources/views/Home/need_tags.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/need_tags.html.twig
@@ -4,9 +4,11 @@
 
 {% block content %}
 
-  <h1>{{ 'title.need_tags'|trans({}, 'navigationui') }}</h1>
+  <div class="top_tools">
+    <h1>{{ 'title.need_tags'|trans({}, 'navigationui') }}</h1>
 
-  <p>{{ 'need_tags.text_help'|trans({}, 'userui') }}</p>
+    <p>{{ 'need_tags.text_help'|trans({}, 'userui') }}</p>
+  </div>
   
   <div class="display_more_elements" style="display: none;">
     <span></span>
@@ -21,7 +23,12 @@
   {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
     'display_more_button' : true,
     'elements_length'     : elements|length,
-    'more_path'           : 'search_elements'
+    'more_path'           : 'search_elements_more',
+    'more_path_params'    : {
+      'session_id' : app.user.getPersonalHash('needstagpage'),
+      'id_limit'   : last_element_id
+    },
+    'link_class'          : 'event_view'
   }%}
   
 {% endblock %}
