Traduire tout les titres de pages Mettre en trad le contenu des pages info (pied de page)

--- a/src/Muzich/CoreBundle/Resources/views/GlobalSearch/results.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/GlobalSearch/results.html.twig
@@ -1,6 +1,6 @@
 {% extends "MuzichCoreBundle::layout.html.twig" %}
 
-{% block title %}Recherche{% endblock %}
+{% block title %}{{ 'title.search'|trans({}, 'userui') }}{% endblock %}
 {% block mainbox_classes %}mainbox_padding{% endblock %}
 
 {% block main_content %}
