--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "MuzichHomeBundle::layout.html.twig" %}
 
-{% block title %}Réseau{% endblock %}
+{% block title %}{{ 'title.home'|trans({}, 'userui') }}{% endblock %}
 {% block mainbox_classes %}mainbox_margintop mainbox_nopadding{% endblock %}
 
 {% block content %}
