--- a/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
+++ b/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "MuzichMynetworkBundle::layout.html.twig" %}
 
-{% block title %}Mon réseau{% endblock %}
+{% block title %}{{ 'title.mynetwork'|trans({}, 'userui') }}{% endblock %}
 {% block mainbox_classes %}mainbox_padding{% endblock %}
 
 {% block content %}
