--- a/src/Muzich/UserBundle/Resources/views/User/account.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/User/account.html.twig
@@ -1,6 +1,6 @@
 {% extends "MuzichUserBundle::layout.html.twig" %}
 
-{% block title %}Mon compte{% endblock %}
+{% block title %}{{ 'title.myaccount'|trans({}, 'userui') }}{% endblock %}
 {% block mainbox_classes %}mainbox_padding{% endblock %}
 
 {% block content %}
