* -Le champs de recherche sur la page de résultats: le 'input est tout petit dans le grand div-  * -Champ de recherche global (page results): Lorsque une erreur de formulaire est présente, le champs de recherche est décalé vers le bas (le input)-

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1625,3 +1625,8 @@ li.element_view_propositions_link
   padding-right: 2px;
   padding-top: 1px;
 }
+
+div#results_search_form div.seachboxcontainer input
+{
+  width: 570px;
+}
