tests fix après integration du nouveau design

--- a/src/Muzich/CoreBundle/Resources/views/GlobalSearch/form.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/GlobalSearch/form.html.twig
@@ -8,7 +8,7 @@
     
     {{ form_widget(form.string) }}
     {{ form_rest(form) }}
-    
+    <input type="submit" style="display: none;" />
     <a href="#" class="global_search_link">
       <img src="{{ asset('/img/icon_search.png') }}" alt="search" />
     </a>
